--- a/index.html
+++ b/index.html
@@ -1776,70 +1776,70 @@
             <h3 class="text-3xl font-bold mb-4">Individual PSUs</h3>
             <div class="modal-list">
                 <ul>
-  <li><a href="ongc-graduate-engineer-trainee.html">Graduate Engineer Trainee (GET) — through GATE</a></li>
-  <li><a href="ongc-assistant-executive-engineer.html">Assistant Executive Engineer</a></li>
-  <li><a href="ongc-geologist-chemist.html">Geologist / Chemist / Scientist</a></li>
-  <li><a href="ongc-medical-officer.html">Medical Officer</a></li>
-  <li><a href="ongc-nontechnical.html">Finance, HR & Other Non-Technical Posts</a></li>
+  <li><a href="ongc-graduate-engineer-trainee-all.html">Graduate Engineer Trainee (GET) — through GATE</a></li>
+  <li><a href="ongc-graduate-engineer-trainee-all.html">Assistant Executive Engineer</a></li>
+  <li><a href="ongc-graduate-engineer-trainee-all.html">Geologist / Chemist / Scientist</a></li>
+  <li><a href="ongc-graduate-engineer-trainee-all.html">Medical Officer</a></li>
+  <li><a href="ongc-graduate-engineer-trainee-all.html">Finance, HR & Other Non-Technical Posts</a></li>
 </ul>
 
 <h3>NTPC (National Thermal Power Corporation)</h3>
 <ul>
-  <li><a href="ntpc-executive-trainee.html">Executive Trainee (ET) — through GATE</a></li>
-  <li><a href="ntpc-diploma-trainee.html">Diploma Engineer Trainee</a></li>
-  <li><a href="ntpc-assistant-chemist.html">Assistant Chemist</a></li>
-  <li><a href="ntpc-mba-hr.html">HR & Finance Executive</a></li>
+  <li><a href="ntpc-executive-trainee-ntpc.html">Executive Trainee (ET) — through GATE</a></li>
+  <li><a href="ntpc-executive-trainee-ntpc.html">Diploma Engineer Trainee</a></li>
+  <li><a href="ntpc-executive-trainee-ntpc.html">Assistant Chemist</a></li>
+  <li><a href="ntpc-executive-trainee-ntpc.html">HR & Finance Executive</a></li>
 </ul>
 
 <h3>GAIL (Gas Authority of India Limited)</h3>
 <ul>
-  <li><a href="gail-executive-trainee.html">Executive Trainee (ET) — through GATE</a></li>
-  <li><a href="gail-manager-hr-finance.html">Manager — HR, Finance, Law</a></li>
-  <li><a href="gail-foreman-technician.html">Foreman, Technician, Junior Engineer</a></li>
+  <li><a href="gail-executive-trainee-gail.html">Executive Trainee (ET) — through GATE</a></li>
+  <li><a href="gail-executive-trainee-gail.html">Manager — HR, Finance, Law</a></li>
+  <li><a href="gail-executive-trainee-gail.html">Foreman, Technician, Junior Engineer</a></li>
 </ul>
 
 <h3>SAIL (Steel Authority of India Limited)</h3>
 <ul>
-  <li><a href="sail-management-trainee.html">Management Trainee (Technical/Administration)</a></li>
-  <li><a href="sail-operator-technician.html">Operator-cum-Technician Trainee</a></li>
-  <li><a href="sail-attendant-technician.html">Attendant-cum-Technician Trainee</a></li>
-  <li><a href="sail-medical-officer.html">Medical Officer & Specialist</a></li>
+  <li><a href="sail-management-trainee-sail.html">Management Trainee (Technical/Administration)</a></li>
+  <li><a href="sail-management-trainee-sail.html">Operator-cum-Technician Trainee</a></li>
+  <li><a href="sail-management-trainee-sail.html">Attendant-cum-Technician Trainee</a></li>
+  <li><a href="sail-management-trainee-sail.html">Medical Officer & Specialist</a></li>
 </ul>
 
 <h3>BHEL (Bharat Heavy Electricals Limited)</h3>
 <ul>
-  <li><a href="bhel-engineer-trainee.html">Engineer Trainee — through GATE</a></li>
-  <li><a href="bhel-supervisor-trainee.html">Supervisor Trainee</a></li>
-  <li><a href="bhel-executive-trainee-finance-hr.html">Executive Trainee — Finance & HR</a></li>
+  <li><a href="bhel-engineer-trainee-bhel.html">Engineer Trainee — through GATE</a></li>
+  <li><a href="bhel-engineer-trainee-bhel.html">Supervisor Trainee</a></li>
+  <li><a href="bhel-engineer-trainee-bhel.html">Executive Trainee — Finance & HR</a></li>
 </ul>
 
 <h3>IOCL (Indian Oil Corporation Limited)</h3>
 <ul>
-  <li><a href="iocl-engineer-officer.html">Engineers / Officers — through GATE</a></li>
-  <li><a href="iocl-apprentice.html">Technician & Trade Apprentice</a></li>
-  <li><a href="iocl-assistant-quality-control.html">Assistant Quality Control Officer</a></li>
-  <li><a href="iocl-medical-officer.html">Medical Officers</a></li>
+  <li><a href="iocl-engineer-officer-iocl-all.html">Engineers / Officers — through GATE</a></li>
+  <li><a href="iocl-engineer-officer-iocl-all.html">Technician & Trade Apprentice</a></li>
+  <li><a href="iocl-engineer-officer-iocl-all.html">Assistant Quality Control Officer</a></li>
+  <li><a href="iocl-engineer-officer-iocl-all.html">Medical Officers</a></li>
 </ul>
 
 <h3>HPCL (Hindustan Petroleum Corporation Limited)</h3>
 <ul>
-  <li><a href="hpcl-engineer.html">Engineers (Mechanical, Civil, Electrical, Instrumentation) — through GATE</a></li>
-  <li><a href="hpcl-officer.html">HR, Finance, Law Officers</a></li>
-  <li><a href="hpcl-apprentice.html">Technician Apprentice</a></li>
+  <li><a href="hpcl-engineer-hpcl-all.html">Engineers (Mechanical, Civil, Electrical, Instrumentation) — through GATE</a></li>
+  <li><a href="hpcl-engineer-hpcl-all.html">HR, Finance, Law Officers</a></li>
+  <li><a href="hpcl-engineer-hpcl-all.html">Technician Apprentice</a></li>
 </ul>
 
 <h3>BPCL (Bharat Petroleum Corporation Limited)</h3>
 <ul>
-  <li><a href="bpcl-graduate-apprentice.html">Graduate & Technician Apprentice</a></li>
-  <li><a href="bpcl-management-trainee.html">Management Trainee</a></li>
-  <li><a href="bpcl-executive.html">Executives (HR, Finance, Legal)</a></li>
+  <li><a href="bpcl-graduate-apprentice-bpcl-all.html">Graduate & Technician Apprentice</a></li>
+  <li><a href="bpcl-graduate-apprentice-bpcl-all.html">Management Trainee</a></li>
+  <li><a href="bpcl-graduate-apprentice-bpcl-all.html">Executives (HR, Finance, Legal)</a></li>
 </ul>
 
 <h3>Power Grid Corporation of India (PGCIL)</h3>
 <ul>
-  <li><a href="pgcil-executive-trainee.html">Executive Trainee — through GATE</a></li>
-  <li><a href="pgcil-diploma-trainee.html">Diploma Trainee (Electrical, Civil, Electronics)</a></li>
-  <li><a href="pgcil-apprentice.html">Apprenticeship</a></li>
+  <li><a href="pgcil-executive-trainee-pgcil-all.html">Executive Trainee — through GATE</a></li>
+  <li><a href="pgcil-executive-trainee-pgcil-all.html">Diploma Trainee (Electrical, Civil, Electronics)</a></li>
+  <li><a href="pgcil-executive-trainee-pgcil-all.html">Apprenticeship</a></li>
 </ul>
             </div>
         </div>
