--- a/index.html
+++ b/index.html
@@ -1859,27 +1859,27 @@
 
 <h3>CET (12th Pass Level)</h3>
 <ul>
-  <li><a href="cet-highersec-ssc-chsl.html">SSC CHSL (Combined Higher Secondary Level)</a></li>
-  <li><a href="cet-highersec-rrb-ntpc.html">RRB NTPC (12th Level Posts)</a></li>
-  <li><a href="cet-highersec-ibps-clerk.html">IBPS Clerk (Prelims Level)</a></li>
-  <li><a href="cet-highersec-ibps-rrb-officer.html">IBPS RRB Officer Scale-I</a></li>
-  <li><a href="cet-highersec-other-exams.html">Other 12th Pass Govt Exams</a></li>
+  <li><a href="cet-highersec-ssc-chsl-all-12th.html">SSC CHSL (Combined Higher Secondary Level)</a></li>
+  <li><a href="cet-highersec-ssc-chsl-all-12th.html">RRB NTPC (12th Level Posts)</a></li>
+  <li><a href="cet-highersec-ssc-chsl-all-12th.html">IBPS Clerk (Prelims Level)</a></li>
+  <li><a href="cet-highersec-ssc-chsl-all-12th.html">IBPS RRB Officer Scale-I</a></li>
+  <li><a href="cet-highersec-ssc-chsl-all-12th.html">Other 12th Pass Govt Exams</a></li>
 </ul>
 
 <h3>CET (Graduate Level)</h3>
 <ul>
-  <li><a href="cet-graduate-ssc-cgl.html">SSC CGL (Combined Graduate Level)</a></li>
-  <li><a href="cet-graduate-rrb-ntpc.html">RRB NTPC (Graduate Level Posts)</a></li>
-  <li><a href="cet-graduate-ibps-po.html">IBPS PO (Probationary Officer)</a></li>
-  <li><a href="cet-graduate-ibps-rrb-officer.html">IBPS RRB Officer Scale-I</a></li>
-  <li><a href="cet-graduate-other-exams.html">Other Graduate Level Govt Exams</a></li>
+  <li><a href="cet-graduate-ssc-cgl-grad.html">SSC CGL (Combined Graduate Level)</a></li>
+  <li><a href="cet-graduate-ssc-cgl-grad.html">RRB NTPC (Graduate Level Posts)</a></li>
+  <li><a href="cet-graduate-ssc-cgl-grad.html">IBPS PO (Probationary Officer)</a></li>
+  <li><a href="cet-graduate-ssc-cgl-grad.html">IBPS RRB Officer Scale-I</a></li>
+  <li><a href="cet-graduate-ssc-cgl-grad.html">Other Graduate Level Govt Exams</a></li>
 </ul>
 
 <h3>Special Notes</h3>
 <ul>
-  <li><a href="cet-validity.html">CET Score Validity — 3 Years</a></li>
-  <li><a href="cet-syllabus.html">CET Common Syllabus & Pattern</a></li>
-  <li><a href="cet-mains-tier.html">Next Stage Exams — SSC/IBPS/RRB Mains, Skill Test, Interview</a></li>
+  <li><a href="cet-validity-special-notes.html">CET Score Validity — 3 Years</a></li>
+  <li><a href="cet-validity-special-notes.html">CET Common Syllabus & Pattern</a></li>
+  <li><a href="cet-validity-special-notes.html">Next Stage Exams — SSC/IBPS/RRB Mains, Skill Test, Interview</a></li>
 </ul>
             </div>
         </div>
