--- a/index.html
+++ b/index.html
@@ -1851,10 +1851,10 @@
             <h3 class="text-3xl font-bold mb-4">NRA (CET)</h3>
             <div class="modal-list">
                 <ul>
-  <li><a href="cet-matric-ssc-mts.html">SSC MTS (Multi-Tasking Staff)</a></li>
-  <li><a href="cet-matric-rrb-groupd.html">RRB Group D</a></li>
-  <li><a href="cet-matric-ibps-support-staff.html">IBPS Support Staff / Clerk (Level-1)</a></li>
-  <li><a href="cet-matric-other-exams.html">Other Group-C/Matric Level Exams</a></li>
+  <li><a href="cet-matric-ssc-mts-rrb-ibps-others.html">SSC MTS (Multi-Tasking Staff)</a></li>
+  <li><a href="cet-matric-ssc-mts-rrb-ibps-others.html">RRB Group D</a></li>
+  <li><a href="cet-matric-ssc-mts-rrb-ibps-others.html">IBPS Support Staff / Clerk (Level-1)</a></li>
+  <li><a href="cet-matric-ssc-mts-rrb-ibps-others.html">Other Group-C/Matric Level Exams</a></li>
 </ul>
 
 <h3>CET (12th Pass Level)</h3>
