--- a/index.html
+++ b/index.html
@@ -1886,62 +1886,62 @@
     </div>
     <!-- Modals -->
     <div id="chatGPTModal" class="modal-overlay">
-        <div class="modal-content">
-            <button class="modal-close-button" title="Close">&times;</button>
-            <h3 class="text-3xl font-bold mb-4">OpenAI</h3>
-            <div class="modal-list">
-                <a href="index.html">GPT‑4.5 / o-series</a>
-                <a href="index.html">Codex</a>
-                <a href="index.html">Whisper</a>
-                <a href="index.html">DALL·E 3</a>
-                <a href="index.html">Sora</a>
-            </div>
+    <div class="modal-content">
+        <button class="modal-close-button" title="Close">&times;</button>
+        <h3 class="text-3xl font-bold mb-4">OpenAI</h3>
+        <div class="modal-list">
+            <a href="gpt-4.5.html">GPT‑4.5 / o-series</a>
+            <a href="codex.html">Codex</a>
+            <a href="whisper.html">Whisper</a>
+            <a href="dalle-3.html">DALL·E 3</a>
+            <a href="sora.html">Sora</a>
         </div>
     </div>
-    <div id="anthropicModal" class="modal-overlay">
-        <div class="modal-content">
-            <button class="modal-close-button" title="Close">&times;</button>
-            <h3 class="text-3xl font-bold mb-4">Anthropic</h3>
-            <div class="modal-list">
-                <a href="index.html">Claude 2</a>
-                <a href="index.html">Claude 3 (Opus, Sonnet, Haiku)</a>
-                <a href="index.html">Claude 3.7</a>
-            </div>
+</div>
+<div id="anthropicModal" class="modal-overlay">
+    <div class="modal-content">
+        <button class="modal-close-button" title="Close">&times;</button>
+        <h3 class="text-3xl font-bold mb-4">Anthropic</h3>
+        <div class="modal-list">
+            <a href="claude-2.html">Claude 2</a>
+            <a href="claude-3.html">Claude 3 (Opus, Sonnet, Haiku)</a>
+            <a href="claude-3.7.html">Claude 3.7</a>
         </div>
     </div>
-    <div id="googleAIModal" class="modal-overlay">
-        <div class="modal-content">
-            <button class="modal-close-button" title="Close">&times;</button>
-            <h3 class="text-3xl font-bold mb-4">Google</h3>
-            <div class="modal-list">
-                <a href="index.html">Gemini (2.0 Pro, 2.5 Pro, Ultra/Pro/Nano)</a>
-                <a href="index.html">Gato</a>
-                <a href="index.html">SIMA</a>
-            </div>
+</div>
+<div id="googleAIModal" class="modal-overlay">
+    <div class="modal-content">
+        <button class="modal-close-button" title="Close">&times;</button>
+        <h3 class="text-3xl font-bold mb-4">Google</h3>
+        <div class="modal-list">
+            <a href="gemini.html">Gemini (2.0 Pro, 2.5 Pro, Ultra/Pro/Nano)</a>
+            <a href="gato.html">Gato</a>
+            <a href="sima.html">SIMA</a>
         </div>
     </div>
-    <div id="metaAIModal" class="modal-overlay">
-        <div class="modal-content">
-            <button class="modal-close-button" title="Close">&times;</button>
-            <h3 class="text-3xl font-bold mb-4">Meta</h3>
-            <div class="modal-list">
-                <a href="index.html">LLaMA 2</a>
-                <a href="index.html">LLaMA 3.2 Vision</a>
-                <a href="index.html">LLaMA 4 (forthcoming)</a>
-            </div>
+</div>
+<div id="metaAIModal" class="modal-overlay">
+    <div class="modal-content">
+        <button class="modal-close-button" title="Close">&times;</button>
+        <h3 class="text-3xl font-bold mb-4">Meta</h3>
+        <div class="modal-list">
+            <a href="llama-2.html">LLaMA 2</a>
+            <a href="llama-3.2.html">LLaMA 3.2 Vision</a>
+            <a href="llama-4.html">LLaMA 4 (forthcoming)</a>
         </div>
     </div>
-    <div id="mistralAIModal" class="modal-overlay">
-        <div class="modal-content">
-            <button class="modal-close-button" title="Close">&times;</button>
-            <h3 class="text-3xl font-bold mb-4">Mistral</h3>
-            <div class="modal-list">
-                <a href="index.html">Mixtral</a>
-                <a href="index.html">Mistral Small/Medium</a>
-                <a href="index.html">Magistral Small/Medium</a>
-            </div>
+</div>
+<div id="mistralAIModal" class="modal-overlay">
+    <div class="modal-content">
+        <button class="modal-close-button" title="Close">&times;</button>
+        <h3 class="text-3xl font-bold mb-4">Mistral</h3>
+        <div class="modal-list">
+            <a href="mixtral.html">Mixtral</a>
+            <a href="mistral-small.html">Mistral Small/Medium</a>
+            <a href="magistral.html">Magistral Small/Medium</a>
         </div>
     </div>
+</div>
     <div id="deepseekModal" class="modal-overlay">
         <div class="modal-content">
             <button class="modal-close-button" title="Close">&times;</button>
