--- a/index.html
+++ b/index.html
@@ -623,6 +623,23 @@
                 <h2 class="text-2xl sm:text-3xl font-extrabold text-golden-dark border-b-4 border-golden-dark inline-block px-4 pb-1">All-A.I- Tools Full Guide</h2>
             </div>
             <div class="grid grid-cols-2 lg:grid-cols-3 gap-4 md:gap-6">
+                 <div class="card" data-modal-target="chatGPTModal" data-keywords="chatgpt openai conversational ai open ai llm gpt-4 gpt-3.5">
+                    <div class="card">
+  <div class="card-content">
+    <div class="card-icon">💡</div> <!-- Prompt/Idea icon -->
+    <h2 class="card-heading">GenratePrompt</h2>
+    <p class="card-sub-heading">Learn Promting</p>
+  </div>
+</div>
+
+<div class="card" data-modal-target="chatGPTModal" data-keywords="chatgpt openai conversational ai open ai llm gpt-4 gpt-3.5">
+  <div class="card-content">
+    <div class="card-icon">📶</div> <!-- Network/Airtel icon -->
+    <h2 class="card-heading">Airtel</h2>
+    <p class="card-sub-heading">Perplexity</p>
+  </div>
+</div>
+
                 <div class="card" data-modal-target="chatGPTModal" data-keywords="chatgpt openai conversational ai open ai llm gpt-4 gpt-3.5">
                     <div class="card-content">
                         <div class="card-icon">🤖</div>
