--- a/index.html
+++ b/index.html
@@ -822,16 +822,35 @@
             <button class="modal-close-button" title="Close">&times;</button>
             <h3 class="text-3xl font-bold mb-4">जिला स्तरीय नौकरियाँ</h3>
             <div class="modal-list">
-                <a href="district-collector-office-jobs.html">Collector Office (Clerk, Peon, Data Entry)</a>
-                <a href="district-court-jobs.html">District Court (Steno, Clerk, Peon)</a>
-                <a href="district-health-department-jobs.html">Health Dept. (ANM, GNM, Lab Tech - Contract)</a>
-                <a href="district-icds-anganwadi-jobs.html">ICDS/Anganwadi (Supervisor, Worker, Helper)</a>
-                <a href="district-panchayati-raj-jobs.html">Panchayati Raj (Panchayat Sahayak, Rojgar Sevak)</a>
-                <a href="district-education-jobs.html">Education Dept. (Guest Teacher, Block Resource Person)</a>
-                <a href="district-land-records-jobs.html">Land Records (Patwari, Amin)</a>
-                <a href="district-municipal-jobs.html">Municipal Corp. (Safai Karamchari, Clerk)</a>
-                <a href="district-drda-jobs.html">District Rural Development Agency (DRDA) Posts</a>
-            </div>
+            <a href="andhra_pradesh.html">आंध्र प्रदेश</a>
+            <a href="arunachal_pradesh.html">अरुणाचल प्रदेश</a>
+            <a href="assam.html">असम</a>
+            <a href="bihar.html">बिहार</a>
+            <a href="chhattisgarh.html">छत्तीसगढ़</a>
+            <a href="goa.html">गोवा</a>
+            <a href="gujarat.html">गुजरात</a>
+            <a href="haryana.html">हरियाणा</a>
+            <a href="himachal_pradesh.html">हिमाचल प्रदेश</a>
+            <a href="jharkhand.html">झारखंड</a>
+            <a href="karnataka.html">कर्नाटक</a>
+            <a href="kerala.html">केरल</a>
+            <a href="madhya_pradesh.html">मध्य प्रदेश</a>
+            <a href="maharashtra.html">महाराष्ट्र</a>
+            <a href="manipur.html">मणिपुर</a>
+            <a href="meghalaya.html">मेघालय</a>
+            <a href="mizoram.html">मिजोरम</a>
+            <a href="nagaland.html">नागालैंड</a>
+            <a href="odisha.html">ओडिशा</a>
+            <a href="punjab.html">पंजाब</a>
+            <a href="rajasthan.html">राजस्थान</a>
+            <a href="sikkim.html">सिक्किम</a>
+            <a href="tamil_nadu.html">तमिलनाडु</a>
+            <a href="telangana.html">तेलंगाना</a>
+            <a href="tripura.html">त्रिपुरा</a>
+            <a href="uttar_pradesh.html">उत्तर प्रदेश</a>
+            <a href="uttarakhand.html">उत्तराखंड</a>
+            <a href="west_bengal.html">पश्चिम बंगाल</a>
+        </div>
         </div>
     </div>
 
