--- a/index.html
+++ b/index.html
@@ -10,9 +10,9 @@
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;700;800&family=Noto+Sans+Devanagari:wght@400;500;700&display=swap" rel="stylesheet">
     <meta name="description" content="UPSC, SSC, RRB, IBPS, RBI, और अन्य सरकारी परीक्षाओं के लिए विस्तृत गाइड। पाठ्यक्रम, योग्यता, परीक्षा प्रक्रिया और तैयारी की रणनीति जानें।">
     <meta name="keywords" content="सरकारी नौकरी, सरकारी परीक्षा, UPSC, SSC, RRB, IBPS, RBI, रेलवे, बैंक, सेना, DRDO, ISRO, LIC, FCI, ESIC, NABARD, SEBI, CET, पात्रता, पाठ्यक्रम, परीक्षा गाइड, सरकारी नौकरी की तैयारी">
-    <link rel="icon" type="image/png" sizes="32x32" href="/fvi.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="/fvi.png">
-    <link rel="apple-touch-icon" sizes="180x180" href="/fvi.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="fvi.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="fvi.png">
+    <link rel="apple-touch-icon" sizes="180x180" href="fvi.png">
     <link rel="manifest" href="/site.webmanifest">
     <link rel="mask-icon" href="/safari-pinned-tab.svg" color="#5bbad5">
     <meta name="msapplication-TileColor" content="#da532c">
