--- a/index.html
+++ b/index.html
@@ -10,15 +10,44 @@
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;700;800&family=Noto+Sans+Devanagari:wght@400;500;700&display=swap" rel="stylesheet">
     <meta name="description" content="UPSC, SSC, RRB, IBPS, RBI, और अन्य सरकारी परीक्षाओं के लिए विस्तृत गाइड। पाठ्यक्रम, योग्यता, परीक्षा प्रक्रिया और तैयारी की रणनीति जानें।">
     <meta name="keywords" content="सरकारी नौकरी, सरकारी परीक्षा, UPSC, SSC, RRB, IBPS, RBI, रेलवे, बैंक, सेना, DRDO, ISRO, LIC, FCI, ESIC, NABARD, SEBI, CET, पात्रता, पाठ्यक्रम, परीक्षा गाइड, सरकारी नौकरी की तैयारी">
-    <link rel="icon" type="image/png" sizes="32x32" href="/fvi.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="/fvi.png">
-    <link rel="apple-touch-icon" sizes="180x180" href="/fvi.png">
+   <!-- Favicon Implementation -->
+    <link rel="icon" type="image/png" sizes="32x32" href="/fvix.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="/fvix.png">
+    <link rel="apple-touch-icon" sizes="180x180" href="/fvix.png">
     <link rel="manifest" href="/site.webmanifest">
     <link rel="mask-icon" href="/safari-pinned-tab.svg" color="#5bbad5">
     <meta name="msapplication-TileColor" content="#da532c">
     <meta name="theme-color" content="#ffffff">
 
-    
+<script type="application/ld+json">
+{
+  "@context": "https://schema.org",
+  "@type": "LocalBusiness",
+  "name": "Your True Guide",
+  "image": "https://crapd.in/fvi.png",
+  "url": "https://crapd.in",
+  "telephone": "+91-8816014071",
+  "address": {
+    "@type": "PostalAddress",
+    "streetAddress": "128/1, Sainipura",
+    "addressLocality": "Sonipat",
+    "addressRegion": "Haryana",
+    "postalCode": "131101",
+    "addressCountry": "IN"
+  },
+  "openingHours": "Mo-Su 08:00-20:00",
+  "contactPoint": {
+    "@type": "ContactPoint",
+    "telephone": "+91-88160-14071",
+    "contactType": "Customer Service",
+    "areaServed": "IN",
+    "availableLanguage": ["Hindi", "English"]
+  },
+  "sameAs": [
+    "https://www.facebook.com/",
+    "https://www.instagram.com/"
+  ]
+}
     <style>
         :root {
             /* Premium Golden Color Scheme on Dark Background */
