--- a/index.html
+++ b/index.html
@@ -11,13 +11,14 @@
     <meta name="description" content="UPSC, SSC, RRB, IBPS, RBI, और अन्य सरकारी परीक्षाओं के लिए विस्तृत गाइड। पाठ्यक्रम, योग्यता, परीक्षा प्रक्रिया और तैयारी की रणनीति जानें।">
     <meta name="keywords" content="सरकारी नौकरी, सरकारी परीक्षा, UPSC, SSC, RRB, IBPS, RBI, रेलवे, बैंक, सेना, DRDO, ISRO, LIC, FCI, ESIC, NABARD, SEBI, CET, पात्रता, पाठ्यक्रम, परीक्षा गाइड, सरकारी नौकरी की तैयारी">
    <!-- Favicon Implementation -->
-    <link rel="icon" type="image/png" sizes="32x32" href="/fvix.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="/fvix.png">
-    <link rel="apple-touch-icon" sizes="180x180" href="/fvix.png">
-    <link rel="manifest" href="/site.webmanifest">
-    <link rel="mask-icon" href="/safari-pinned-tab.svg" color="#5bbad5">
-    <meta name="msapplication-TileColor" content="#da532c">
-    <meta name="theme-color" content="#ffffff">
+    <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
+    <link rel="shortcut icon" href="/favicon.ico">
+    <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
+    <link rel="manifest" href="/site.webmanifest">
+    <link rel="mask-icon" href="/safari-pinned-tab.svg" color="#5bbad5">
+    <meta name="msapplication-TileColor" content="#da532c">
+    <meta name="theme-color" content="#ffffff">
 
 <script type="application/ld+json">
 {
