--- a/index.html
+++ b/index.html
@@ -567,7 +567,7 @@
             <section class="latest-forms">
                 <!-- Title is now placed relative to the inner section for Z-index -->
                 <div class="text-center mb-6">
-                    <h2 class="text-2xl sm:text-3xl font-extrabold text-golden-dark border-b-4 border-golden-dark inline-block px-4 pb-1">Latest-Recruitment</h2>
+                    <h2 class="text-2xl sm:text-3xl font-extrabold text-golden-dark border-b-4 border-golden-dark inline-block px-4 pb-1">Top Trending Now</h2>
                 </div>
                 
                 <div class="slider-container relative">
