--- a/index.html
+++ b/index.html
@@ -586,10 +586,10 @@
                   <div class="border-l-4 border-primary/50 pl-6 text-sm flex flex-col items-start bg-primary/5 p-2 rounded-xl shadow-inner">
                     <!-- Text Color set to White/Light -->
                     <a href="tel:8816014071" class="flex items-center font-extrabold text-white hover:text-primary transition-colors transform hover:scale-[1.05] duration-200">
-                      <i class="fas fa-phone-alt mr-2 text-primary"></i> <span class="text-xl tracking-wider">8816014071</span>
+                      <i class="fas fa-phone-alt mr-2 text-primary"></i> <span class="text-xl tracking-wider">0000000000</span>
                     </a>
                     <a href="mailto:care@yourtrueguide.com" class="flex items-center text-xs text-text-secondary hover:text-primary transition-colors mt-1">
-                      <i class="fas fa-envelope mr-2 text-secondary/70"></i> <b>care@yourtrueguide.com</b>
+                      <i class="fas fa-envelope mr-2 text-secondary/70"></i> <b>0000000000</b>
                     </a>
                   </div>
                 </div>
@@ -671,7 +671,7 @@
                 <div class="text-center mb-6">
                     <h2 class="text-2xl sm:text-3xl font-extrabold text-golden-dark border-b-4 border-golden-dark inline-block px-4 pb-1">Latest-Recruitment</h2>
                 </div>
-                
+                <br>
                 <div class="slider-container relative">
                     <!-- Slides Wrapper will contain the dynamic content over the image -->
                     <div id="slides-wrapper" class="relative w-full h-full"></div>
