--- a/index.html
+++ b/index.html
@@ -646,10 +646,10 @@
                     <div class="flex flex-col items-start space-y-3 pt-4 bg-black/30 p-4 rounded-xl shadow-2xl border border-primary/50">
                       <h4 class="text-base font-bold text-primary mb-1">Need Help? (24x7)</h4>
                       <a href="tel:8816014071" class="flex items-center font-extrabold text-white hover:text-secondary transition-colors text-xl p-3 rounded-full bg-primary/90 w-full justify-center transform hover:scale-[1.02] shadow-xl shadow-primary/70 border-2 border-white/20">
-                         <i class="fas fa-phone-volume mr-3"></i> <span>8816014071</span>
+                         <i class="fas fa-phone-volume mr-3"></i> <span>0000000000</span>
                       </a>
                       <a href="mailto:care@yourtrueguide.com" class="flex items-center text-xs text-gray-400 hover:text-primary transition-colors pt-2">
-                         <i class="fas fa-at mr-2"></i> <span>care@yourtrueguide.com</span>
+                         <i class="fas fa-at mr-2"></i> <span>000000000000000</span>
                       </a>
                     </div>
                     
@@ -661,7 +661,7 @@
     </div>
     <!-- END HEADER -->
 
-
+<br>
     <div class="container mx-auto p-4 md:p-8 lg:p-12 main-container">
         
         <!-- SLIDE SECTION WRAPPER (FOR DYNAMIC BACKGROUND & BORDER) -->
