--- a/index.html
+++ b/index.html
@@ -558,7 +558,7 @@
                 <!-- Logo and Title -->
                 <a href="index.html" class="flex items-center no-underline transform hover:scale-[1.02] transition-transform duration-300">
                   <!-- Logo Image -->
-                  <img src="ytg.png" alt="Your True Guide Logo" class="h-10 w-10 sm:h-12 sm:w-12 mr-3 rounded-full shadow-lg border border-primary/50" onerror="this.onerror=null;this.src='https://placehold.co/48x48/FFD700/1A1C20?text=YTG';" />
+                  <img src="ytglogo.png" alt="Your True Guide Logo" class="h-10 w-10 sm:h-12 sm:w-12 mr-3 rounded-full shadow-lg border border-primary/50" onerror="this.onerror=null;this.src='https://placehold.co/48x48/FFD700/1A1C20?text=YTG';" />
                   <!-- Text Color set to White/Light -->
                   <span class="text-xl sm:text-3xl font-extrabold text-white transition-colors tracking-tight drop-shadow-md">
                     Your True <span class="text-primary">Guide</span>
