--- a/index.html
+++ b/index.html
@@ -1508,7 +1508,7 @@
                 <div id="progress-1" class="progress-fill"></div>
             </div>
             <h2 class="text-3xl font-bold text-center mb-6 golden-text-gradient-custom">
-             Aao Ji
+             Greetings
             </h2>
             <form id="form-step-1" class="space-y-4">
                 <div>
@@ -1523,7 +1523,7 @@
                     <input type="email" id="email" name="email" placeholder="your@email.com" required class="w-full p-3 rounded-lg input-field">
                 </div>
                 <button type="submit" id="next-button" class="w-full py-3 mt-6 text-base font-semibold rounded-full button-primary">
-                    Proceed
+                    I Will Do iT
                 </button>
             </form>
         </div>
@@ -1533,7 +1533,7 @@
                 <div id="progress-2" class="progress-fill"></div>
             </div>
             <h2 class="text-3xl font-bold text-center mb-6 golden-text-gradient-custom">
-                Kya Hal-Chal Hai JI Apke
+             Good Choice Buddy
             </h2>
             <p class="text-center text-gray-400 mb-6">
                 What you'll get in this guide:
@@ -1576,7 +1576,7 @@
                 </button>
             </div>
             <button id="pay-button" class="w-full py-3 mt-4 text-base font-semibold rounded-full button-primary">
-                Pay ₹99 Now
+                Get iT In ₹99 Now
             </button>
         </div>
 
@@ -1592,7 +1592,7 @@
                 Time Remaining: 05:00
             </div>
             <button id="razorpay-payment-btn" class="w-full py-3 mt-4 text-base font-semibold rounded-full button-primary">
-                Pay with Razorpay
+                Do iT Buddy
             </button>
             <p class="mt-4 text-xs text-gray-500 text-center">
                 After payment, please do not close this window.
@@ -1607,9 +1607,9 @@
             <h2 class="text-3xl font-bold mb-4 golden-text-gradient-custom">
                 🎉 Congratulations!
             </h2>
-            <h3 class="triumph-text mb-4">Welcome to the path of success!</h3>
+            <h3 class="triumph-text mb-4">iF You Are Using Android App Dont Uninstall It</h3>
             <p class="text-gray-400 text-base mb-6">
-                Your payment was successful. You are now ready to begin a new journey.
+                If You Are Using Website Dont Clear History Cause We Didnt Use Sign in / Sign Up method
             </p>
             <div id="loader" class="mx-auto my-4 spinner hidden"></div>
             <button id="okay-button" class="w-full py-3 mt-6 text-base font-semibold rounded-full button-primary hidden">
