--- a/index.html
+++ b/index.html
@@ -1523,7 +1523,7 @@
                     <input type="email" id="email" name="email" placeholder="your@email.com" required class="w-full p-3 rounded-lg input-field">
                 </div>
                 <button type="submit" id="next-button" class="w-full py-3 mt-6 text-base font-semibold rounded-full button-primary">
-                    I Will Do iT
+                    My Choice
                 </button>
             </form>
         </div>
@@ -1592,7 +1592,7 @@
                 Time Remaining: 05:00
             </div>
             <button id="razorpay-payment-btn" class="w-full py-3 mt-4 text-base font-semibold rounded-full button-primary">
-                Do iT Buddy
+                Let's Do iT Buddy
             </button>
             <p class="mt-4 text-xs text-gray-500 text-center">
                 After payment, please do not close this window.
@@ -1613,7 +1613,7 @@
             </p>
             <div id="loader" class="mx-auto my-4 spinner hidden"></div>
             <button id="okay-button" class="w-full py-3 mt-6 text-base font-semibold rounded-full button-primary hidden">
-                OK, Proceed
+                OK, GoT iT
             </button>
         </div>
     </div>
