--- a/index.html
+++ b/index.html
@@ -1648,7 +1648,7 @@
                 { "title": "RBI असिस्टेंट भर्ती 2026", "date": "05 फरवरी 2026", "link": "https://www.rbi.org.in/careers", "deadline": "2026-02-05", "bgImage": "nabard.png" },
                 { "title": "NABARD ग्रेड A भर्ती 2026", "date": "18 मार्च 2026", "link": "https://www.nabard.org/career", "deadline": "2026-03-18", "bgImage": "nabard.png" },
                 { "title": "PNB विशेषज्ञ अधिकारी (SO) भर्ती 2026", "date": "01 फरवरी 2026", "link": "https://www.pnbindia.in/recruitment.html", "deadline": "2026-02-01", "bgImage": "ibps.png" },
-                { "title": "IDBI एक्जीक्यूटिव भर्ती 2025", "date": "29 दिसंबर 2025", "link": "https://www.idbibank.in/idbi-bank-careers.asp", "deadline": "2025-12-29", "bgImage": "idbi.png" },
+                { "title": "IDBI एक्जीक्यूटिव भर्ती 2025", "date": "29 दिसंबर 2025", "link": "https://www.idbibank.in/idbi-bank-careers.asp", "deadline": "2025-12-29", "bgImage": "ibps.png" },
                 { "title": "HDFC बैंक रिलेशनशिप मैनेजर भर्ती 2026", "date": "20 जनवरी 2026", "link": "https://www.hdfcbank.com/careers", "deadline": "2026-01-20", "bgImage": "ibps.png" },
                 { "title": "बैंक ऑफ बड़ौदा वेल्थ मैनेजमेंट भर्ती 2026", "date": "12 मार्च 2026", "link": "https://www.bankofbaroda.in/careers", "deadline": "2026-03-12", "bgImage": "ibps.png" },
                 { "title": "इंडियन बैंक सुरक्षा गार्ड भर्ती 2026", "date": "28 फरवरी 2026", "link": "https://www.indianbank.in/career", "deadline": "2026-02-28", "bgImage": "ibps.png" },
