--- a/index.html
+++ b/index.html
@@ -669,7 +669,7 @@
             <section class="latest-forms">
                 <!-- Title is now placed relative to the inner section for Z-index -->
                 <div class="text-center mb-6">
-                    <h2 class="text-2xl sm:text-3xl font-extrabold text-golden-dark border-b-4 border-golden-dark inline-block px-4 pb-1">Latest-Recruitment</h2>
+                    <h2 class="text-2xl sm:text-3xl font-extrabold text-golden-dark border-b-4 border-golden-dark inline-block px-4 pb-1">Top Trending Now</h2>
                 </div>
                 
                 <div class="slider-container relative">
@@ -688,7 +688,7 @@
         <!-- CARD GRID 1: GOVT EXAMS -->
         <section id="govt-exam-section" class="govt-exam-guide-section mb-8">
             <div class="text-center mb-6">
-                <h2 class="text-2xl sm:text-3xl font-extrabold text-golden-dark border-b-4 border-golden-dark inline-block px-4 pb-1">All-Govt-Exam-Full-Guide</h2>
+                <h2 class="text-2xl sm:text-3xl font-extrabold text-golden-dark border-b-4 border-golden-dark inline-block px-4 pb-1">Government Exam </h2>
             </div>
             <div class="grid grid-cols-2 lg:grid-cols-4 gap-4 md:gap-6">
                 <div class="card" data-modal-target="upscModal" data-keywords="upsc संघ लोक सेवा आयोग civil services ese cse ifos nda cds capf" data-desktop="upsc.png" data-mobile="upsc.png">
@@ -889,7 +889,7 @@
         <!-- CARD GRID 2: AI TOOLS -->
         <section id="ai-guide-section" class="ai-full-guide-section mb-8">
             <div class="text-center mb-6"><br>
-                <h2 class="text-2xl sm:text-3xl font-extrabold text-golden-dark border-b-4 border-golden-dark inline-block px-4 pb-1">All-A.I- Tools Full Guide</h2>
+                <h2 class="text-2xl sm:text-3xl font-extrabold text-golden-dark border-b-4 border-golden-dark inline-block px-4 pb-1">Artificial Inteligence</h2>
             </div>
             <div class="grid grid-cols-2 lg:grid-cols-4 gap-4 md:gap-6">
                 <div class="card" data-modal-target="chatGPTModal" data-keywords="chatgpt openai conversational ai open ai llm gpt-4 gpt-3.5" data-desktop="openai.png" data-mobile="openai.png">
@@ -994,7 +994,7 @@
         <!-- CARD GRID 3: PRIVATE SECTOR -->
         <section id="private-sector-section" class="private-sector-job-guide-section mb-8">
             <div class="text-center mb-6">
-                <h2 class="text-2xl sm:text-3xl font-extrabold text-golden-dark border-b-4 border-golden-dark inline-block px-4 pb-1">All-Private-Jobs-Full-Guide</h2>
+                <h2 class="text-2xl sm:text-3xl font-extrabold text-golden-dark border-b-4 border-golden-dark inline-block px-4 pb-1">Private Jobs Prep</h2>
             </div>
             <div class="grid grid-cols-2 lg:grid-cols-4 gap-4 md:gap-6">
                 <div class="card" data-modal-target="itSoftwareModal" data-keywords="it software jobs software engineer web developer app developer data scientist analyst ai ml engineer cybersecurity cloud engineer ui ux designer tech support engineer" data-desktop="itsoftys.png" data-mobile="itsoftys.png">
