--- a/index.html
+++ b/index.html
@@ -586,10 +586,10 @@
                   <div class="border-l-4 border-primary/50 pl-6 text-sm flex flex-col items-start bg-primary/5 p-2 rounded-xl shadow-inner">
                     <!-- Text Color set to White/Light -->
                     <a href="tel:8816014071" class="flex items-center font-extrabold text-white hover:text-primary transition-colors transform hover:scale-[1.05] duration-200">
-                      <i class="fas fa-phone-alt mr-2 text-primary"></i> <span class="text-xl tracking-wider">8816014071</span>
+                      <i class="fas fa-phone-alt mr-2 text-primary"></i> <span class="text-xl tracking-wider">000000000</span>
                     </a>
                     <a href="mailto:care@yourtrueguide.com" class="flex items-center text-xs text-text-secondary hover:text-primary transition-colors mt-1">
-                      <i class="fas fa-envelope mr-2 text-secondary/70"></i> <b>care@yourtrueguide.com</b>
+                      <i class="fas fa-envelope mr-2 text-secondary/70"></i> <b>0000000000000000000</b>
                     </a>
                   </div>
                 </div>
@@ -646,10 +646,10 @@
                     <div class="flex flex-col items-start space-y-3 pt-4 bg-black/30 p-4 rounded-xl shadow-2xl border border-primary/50">
                       <h4 class="text-base font-bold text-primary mb-1">Need Help? (24x7)</h4>
                       <a href="tel:8816014071" class="flex items-center font-extrabold text-white hover:text-secondary transition-colors text-xl p-3 rounded-full bg-primary/90 w-full justify-center transform hover:scale-[1.02] shadow-xl shadow-primary/70 border-2 border-white/20">
-                         <i class="fas fa-phone-volume mr-3"></i> <span>8816014071</span>
+                         <i class="fas fa-phone-volume mr-3"></i> <span>0000000000</span>
                       </a>
                       <a href="mailto:care@yourtrueguide.com" class="flex items-center text-xs text-gray-400 hover:text-primary transition-colors pt-2">
-                         <i class="fas fa-at mr-2"></i> <span>care@yourtrueguide.com</span>
+                         <i class="fas fa-at mr-2"></i> <span>0000000000000</span>
                       </a>
                     </div>
                     
